# kde-browser-picker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_appimage.sh
include/: constants.h  version.h
resources/: browser-picker.desktop
src/: browserdetector.cpp  browserdetector.h  configmanager.cpp  configmanager.h  kdeintegration.cpp  kdeintegration.h  main.cpp  mainwindow.cpp  mainwindow.h  profilemanager.cpp  profilemanager.h
src/ui/: mainwindow.ui  profileitem.cpp  profileitem.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
tests/: CMakeLists.txt  test_browserdetector_security.cpp  test_yaml_overrides.cpp
